fix: alignment start menu

--- a/src/components/start_menu/StartMenu.module.css
+++ b/src/components/start_menu/StartMenu.module.css
@@ -170,6 +170,7 @@
 
     section {
       width: 50%;
+      align-items: end;
 
       .selection {
         max-width: 35.25rem;
